# no.1-semantic-doc-search

./: .env.example  .gitignore  init_script.sh
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  adb.py  database.py  document.py  oci.py  search.py
backend/app/services/: __init__.py  adb_service.py  ai_copilot.py  connection_pool_manager.py  database_service.py  document_processor.py  image_vectorizer.py  oci_service.py  parallel_processor.py  vector_search.py
backend/app/utils/: __init__.py  auth_util.py  error_handler.py
dify/: ★検索アプリv5.yml
frontend/: app.js  components.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: config.js  state.js  style.css
frontend/src/modules/: auth.js  db.js  document.js  oci.js  search.js  utils.js
scripts/: start-backend.sh  start-frontend.sh
terraform/stack/: adb.tf  bucket.tf  datasources.tf  extract_wallet.sh  output.tf  schema.yaml  variables.tf
terraform/stack/cloud_init/: bootstrap.template.yaml
